made changes to transition activity

--- a/transition-activity/activity.css
+++ b/transition-activity/activity.css
@@ -1,1 +1,9 @@
-
+.btn {
+    background-color: ghostwhite;
+    color: black;
+    transition: 2s;
+}
+.btn:hover{
+    background-color: cornflowerblue;
+    color: white;
+}
