--- a/animation-activity/activity.css
+++ b/animation-activity/activity.css
@@ -28,16 +28,17 @@ nav {
 }
 
 @keyframes top {
-  from {}
-  to {}
+  from {top: 0px;}
+  to {transform: rotate(45deg);}
 }
 
 @keyframes middle {
-  from {}
-  to {}
+  from {background-color: rebeccapurple;}
+  to {background-color: mediumvioletred;}
 }
 
 @keyframes bottom {
-  from {}
-  to {}
+  from {bottom: 0px}
+  to {transform: rotate(-45deg);}
 }
+
